Performance and code improvements
Moved footprint data to a json file and added footprint data estimation for better support with other mods, added automatic publishing